# Simumo

./: .gitignore  CODEOWNERS  Makefile  README.md  timesheetDetailleeSamuel.txt
Visualizer/: .gitignore  (+1 more)
simulator/: .gitignore  CODEOWNERS  Cargo.toml  README.md  config.json  config.yaml  configs.json
simulator/etc/: car_list.json  config.yaml  config_sherbrooke.yaml  config_sherbrooke_3615_car.yaml  config_sherbrooke_car.yaml  config_sherbrooke_log.yaml  config_square.yaml  config_tokyo.yaml  config_tokyo_big.yaml  config_triangle.yaml  sherbrooke_graph.json  triangle_graph.json
simulator/src/: CarPosition.ndjson  argsparser.rs  command_line.rs  errors.rs  internal_prelude.rs  main.rs  mainx.rs  osmgraph_api.rs  types.rs  util.rs
simulator/src/clock/: mod.rs
simulator/src/command_line/: arguments.rs
simulator/src/commons/: coordinates.rs  curve.rs  log_data_entry.rs  metrics.rs  mod.rs  percentage.rs
simulator/src/components/: agents.rs  constant.rs  controls.rs  dynamic.rs  generics.rs  interactive.rs  log_record.rs  mod.rs  position.rs  simumo_component.rs  statics.rs  type_prelude.rs
simulator/src/components/agents/: example_agents.rs  mod.rs
simulator/src/components/statics/: mod.rs
simulator/src/components/systems/: example_system.rs  mod.rs
simulator/src/components/types/: agents.rs  constant.rs  controls.rs  dynamic.rs  log_record.rs  mod.rs  spawner.rs
simulator/src/configurations/: configuration.rs  debugger.rs  generals.rs  map.rs  mod.rs  systems.rs
simulator/src/entities/: entity_prelude.rs  entity_type.rs  mod.rs
simulator/src/entities/types/: car_entity.rs  light_entity.rs  mod.rs
simulator/src/metrics/: coordinates.rs  mod.rs
simulator/src/ressources/: clock.rs  entitytable.rs  eventsmanager.rs  generals.rs  lane_graph.rs  mod.rs  random.rs  res_prelude.rs  street_map.rs
simulator/src/ressources/curve/: mod.rs  percentage.rs  point2d.rs
simulator/src/ressources/entitiesmanagement/: entitiesmanager.rs
simulator/src/ressources/entitiesmanager/: entitiesmanager.rs  mod.rs
simulator/src/rng/: seed.rs
simulator/src/simulation/: builder.rs  dispatchers.rs  entities.rs  mod.rs  simulation.rs  simulator.rs  system_setter.rs
simulator/src/simulator/: mod.rs  simulator.rs
simulator/src/systems/: clock.rs  mod.rs  sys_prelude.rs  system_definition.rs  system_dependencies.rs  system_type_definition.rs
simulator/src/topology/: mod.rs  road.rs  road_connector.rs  spline.rs
simulator/src/types/: mod.rs
simulator/src/vdebugger/: graphics.rs  graphics_00.rs  input.rs  mod.rs
(+143 files in other folders)
