[package]
name = "simulator"
version = "0.1.0"
authors = ["Karim Elmougi <karim.elmougi@gmail.com>", "whis2401 <samleafs@protonmail.com>","bigj2701 <bigjerbd@gmail.com>", "nadj2316 <jonatan.nadeau@usherbrooke.ca>" ]
edition = "2018"

[dependencies]
argparse  = "0.2.2"
dimensioned = "0.7.0"
lazy_static = "1.2.0"
simumo_derive = {path = "extern/simumo_derive"}
uuid = {version = "0.7", features = ["v4"]}
#data structure
petgraph = "0.4.13"
#ecs
specs = "0.14.3"
specs-derive = "0.4.0"
#serialization
csv = "1"
serde = "1.0.87"
serde_json = "1.0"
serde_derive = "1.0.86"
erased-serde = "0.3"

#meta-programming
syn = "0.15.26"
proc-macro2 = "0.4.27"
quote = "0.6.11"

#externals
typeinfo = {path = "extern/typeinfo"}
typeinfo_derive = {path = "extern/typeinfo_derive"}

#rng
rand = "0.6"
